Fixing bootstrap white space on right

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,5 +1,10 @@
 body {
   background-color: #111;
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden;
 }
 
 h1, h3 {
